<resources>
    <string name="app_name">Romanianod</string>
    <string name="loading">Loading...</string>
    <string name="here_will_be_your_pass">here will be your password...\n Just press GENERATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate">generate</string>
    <string name="settings_text">settings</string>
    <string name="text_about">Create strong passwords with keywords from your favorite movie to protect your accounts.</string>
    <string name="music">music</string>
    <string name="text_activity_good">Pizza is a dish of Italian origin consisting of a usually round, flat base of leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients (such as various types of sausage, anchovies, mushrooms, onions, olives, vegetables, meat, ham, etc.), which is then baked at a high temperature, traditionally in a wood-fired oven.[1] A small pizza is sometimes called a pizzetta. A person who makes pizza is known as a pizzaiolo. In Italy, pizza served in a restaurant is presented unsliced, and is eaten with the use of a knife and fork.[2][3] In casual settings, however, it is cut into wedges to be eaten while held in the hand.</string>
    <string name="about"><u>about</u></string>
    <string name="vibration">vibration</string>
    <string name="country_name">roman empire</string>
    <string name="country_about_settings_short">Due to the Roman Empires vast extent and long endurance, the institutions and culture of Rome had a profound and lasting influence on the development of language, religion, art, architecture, literature, philosophy, law, and forms of government in the territory it governed. The Latin language of the Romans evolved into the Romance languages of the medieval and modern world, while Medieval Greek became the language of the Eastern Roman Empire. The Empires adoption of Christianity led to the formation of medieval Christendom. Roman and Greek art had a profound impact on the Italian Renaissance. Romes architectural tradition served as the basis for Romanesque, Renaissance and Neoclassical architecture, and also had a strong influence on Islamic architecture. The rediscovery of Greek and Roman science and technology (which also formed the basis for Islamic science) in Medieval Europe led to the Scientific Renaissance and Scientific Revolution.</string>
    <string name="about_country_long">The Roman Empire; Greek: Βασιλεία τῶν Ῥωμαίων, translit. Vasileía tôn Rhōmaíōn) was the post-Republican period of ancient Rome. As a polity, it included large territorial holdings around the Mediterranean Sea in Europe, North Africa, and Western Asia, and was ruled by emperors. From the accession of Caesar Augustus as the first Roman emperor to the military anarchy of the 3rd century, it was a principate with Italy as the metropole of its provinces and the city of Rome as its sole capital. The Empire was later ruled by multiple emperors who shared control over the Western Roman Empire and the Eastern Roman Empire.\n The city of Rome remained the nominal capital of both parts until AD 476 when the imperial insignia were sent to Constantinople following the capture of the Western capital of Ravenna by the Germanic barbarians.\n The adoption of Christianity as the state church of the Roman Empire in AD 380 and the fall of the Western Roman Empire to Germanic kings conventionally marks the end of classical antiquity and the beginning of the Middle Ages.\n\n Because of these events, along with the gradual Hellenization of the Eastern Roman Empire, historians distinguish the medieval Roman Empire that remained in the Eastern provinces as the Byzantine Empire. The predecessor state of the Roman Empire, the Roman Republic, became severely destabilized in civil wars and political conflicts. In the mid of the 1st century BC, Julius Caesar was appointed as perpetual dictator and then assassinated in 44 BC. Civil wars and proscriptions continued, eventually culminating in the victory of Octavian over Mark Antony and Cleopatra at the Battle of Actium in 31 BC. The following year,\n Octavian conquered the Ptolemaic Kingdom in Egypt, ending the Hellenistic period that had begun with the 4th century BC conquests of Alexander the Great.\n\n Octavians power became unassailable and the Roman Senate granted him overarching power and the new title of Augustus, making him the first Roman emperor. The vast Roman territories were organized in senatorial and imperial provinces except Italy, which continued to serve as a metropole.</string>
    <string name="soldiers_name">-- roman empire soldiers --</string>
    <string name="soldiers_about">The Late Roman army is the term used to denote the military forces of the Roman Empire from the accession of Emperor Diocletian in 284 until the Empires definitive division into Eastern and Western halves in 395. A few decades afterwards, the Western army disintegrated as the Western empire collapsed. The East Roman army, on the other hand, continued intact and essentially unchanged until its reorganization by themes and transformation into the Byzantine army in the 7th century. The term "late Roman army" is often used to include the East Roman army.\n\nThe army of the Principate underwent a significant transformation, as a result of the chaotic 3rd century. Unlike the Principate army, the army of the 4th century was heavily dependent on conscription and its soldiers were more poorly remunerated than in the 2nd century. Barbarians from outside the empire probably supplied a much larger proportion of the late armys recruits than in the army of the 1st and 2nd centuries. \n\nThe size of the 4th-century army is controversial. More dated scholars (e.g. A.H.M. Jones, writing in the 1960s) estimated the late army as much larger than the Principate army, half the size again or even as much as twice the size. With the benefit of archaeological discoveries of recent decades, many contemporary historians view the late army as no larger than its predecessor: under Diocletian c. 390,000 (the same as under Hadrian almost two centuries earlier) and under Constantine no greater, and probably somewhat smaller, than the Principate peak of c. 440,000. The main change in structure was the establishment of large armies that accompanied the emperors (comitatus praesentales) and were generally based away from the frontiers. Their primary function was to deter usurpations. The legions were split up into smaller units comparable in size to the auxiliary regiments of the Principate. In parallel, legionary armour and equipment were abandoned in favour of auxiliary equipment. Infantry adopted the more protective equipment of the Principate cavalry.</string>
    <string name="benefits_all">1. The average slice of pizza contains 12 grams of protein. \n\nProtein is an essential component of good health. Protein is what helps you to gain muscle, and make hair, blood, connective tissue, antibodies, enzymes, and more. Without enough protein in your diet, you’d start getting sick quite often. While everyone’s daily requirement for protein differs based on their body type and activity levels, it’s important to make sure that you are getting enough. One delicious way to do this is through pizza! The average slice contains 12 grams, which is a great way to get the protein you need while enjoying a delicious meal.\n\n2. Pizza can help you absorb the antioxidant Lycopene.\nLycopene is found in tomatoes, which are used to make the base sauce for pizzas. Lycopene helps to lower blood pressure and bring down high cholesterol. It’s also more easily absorbed from cooked tomatoes as opposed to fresh tomatoes. The next time you’re trying to think of a healthy meal to get for dinner, think pizza!\n3. Fresh veggies are one of the healthiest toppings!\n\nYou probably heard your parents tell you many times to eat your veggies. In fact, you may have even had one of the infamous dinner-table showdowns where you had to stay at the table until you cleaned your plate. We hope that you childhood experiences with vegetables didn’t ruin them for you. Vegetables are still a great part of a healthy diet, which is why at Steel City Pizza in North Charleston, we are proud to offer a wide selection of fresh veggies to use for your pizza toppings. </string>

    <string-array name="servings">
        <item>Cheese</item>
        <item>Pineapple</item>
        <item>Meat</item>
        <item>Seafood</item>
        <item>Margarita</item>
        <item>Carbonara</item>
        <item>Diablo</item>
    </string-array>
</resources>